
Wed Nov 14 17:03:30 CET 2001 Paolo Molaro <lupus@ximian.com>

	* IFormatterConverter.cs, SerializationInfo.cs: CLSCompliant updates.

Fri Nov 2 18:40:12 CET 2001 Paolo Molaro <lupus@ximian.com>

	* SerializationException.cs: implemented.

2001-08-24  Nick Drochak  <ndrochak@gol.com>

	* SerializationInfo.cs: Added all the public methods so that the compile would not break

2001-07-20  Miguel de Icaza  <miguel@ximian.com>

	* SerializationInfo.cs: New file.

	* IFormatterConverter.cs: New file.

	* ISerializable.cs: New file.
	
