@@ -1,3 +1,6 @@
+2001-08-24  Nick Drochak  <ndrochak@gol.com>
+
+	* IDeserializationCallback.cs: New File
 
 Wed Nov 14 17:03:30 CET 2001 Paolo Molaro <lupus@ximian.com>
 
